grammar.js
    source_file: $ => seq(
      optional('unit'), _statement_list($),
    ),

    line_comment: $ => token(seq(
      '%', /.*/
    )),

    _statement_line: $ => choice(
      $._statement,
      ';'
    ),

    constvar_declaration: $ => seq(
      choice('const', 'var'),
      optional($.pervasive_attr),
      optional($.register_attr),
      $._name_list,
      optional(seq(
        ':', field('type_spec', $._type)
      )),
      optional(seq(
        ':=', field('initializer', $._expression),
      )),
    ),

    assign_statement: $ => prec.right(PREC.assign, seq(
      field('left', $._expression),
      ':=',
      field('right', $._expression),
    )),

    _expression: $ => choice(
      $.literal_expression,
      $.objclass_expression,
      $.init_expression,
      $.nil_expression,
      $.sizeof_expression,
      $.binary_expression,
      $.unary_expression,
      $.paren_expression,

      $.self_expression,
      $.nameref_expression,
      $.field_expression,
      $.deref_expression,
      $.cheat_expression,
      $.nat_cheat_expression,
      $.arrow_expression,
      $.indirect_expression,
      $.bits_expression,
      $.call_expression,
    ),

    literal_expression: $ => choice(
      $.string_literal,
      $.char_literal,
      $.boolean_literal,
      $.integer_literal,
      $.real_literal,
    ),

    string_literal: $ => seq(
      '"',
      repeat(
        choice(
          $.escape_sequence,
          $.string_content,
        )
      ),
      token.immediate('"'),
    ),

    char_literal: $ => seq(
      '\'',
      repeat(
        choice(
          $.escape_sequence,
          $.char_content,
        )
      ),
      token.immediate('\''),
    ),

    escape_sequence: $ => choice(
      $._backslash_escapes,
      $._caret_escapes,
    ),

    _backslash_escapes: $ => seq(
      '\\',
      choice(
        // char escapes
        /[\\"'\^]/,
        // control char escapes
        /[bdefrntBDEFRNT]/,
        // octal escapes
        /[0-7]{1,3}/,
        // hex escapes
        /x[0-9a-fA-F]{1,2}/,
        // unicode escapes
        /[uU][0-9a-fA-F]{1,8}/,
      ),
    ),

    _caret_escapes: $ => /\^[@-_a-z?]/,

    boolean_literal: $ => choice('true', 'false'),

    integer_literal: $ => token(seq(
      choice(
        /[0-9]+/,
        /[0-9]+#[a-zA-Z0-9]+/,
      )
      // ???: specifying sizes:
      // could be like `123!i4`, composes well with # and stuff
      // and '!' is unused in the syntax right now
    )),

    objclass_expression: $ => seq('objectclass', '(', $._expression, ')'),

    init_expression: $ => seq('init', '(', sepBy(',', $._expression), optional(','), ')'),

    nil_expression: $ => prec.right(seq(
      'nil',
      optional(seq(
        '(',
        optional(choice($.item_path, $.primitive_type)),
        ')'
      )),
    )),

    sizeof_expression: $ => seq(
      // Not planning to support the size_spec part in sema, since while the
      // acceptable values are only 1, 2 and 4, those can be computed in an
      // arbitrary manner, and that's not fun for incremental compilation
      'sizeof', '(',
      choice($._expression, $._type),
      optional(seq(
        ':',
        field('size_spec', $._expression),
      )),
      ')',
    ),

    self_expression: $ => 'self',

    nameref_expression: $ => $.path_component,

    binary_expression: $ => {
      /** @type {[number, string | ChoiceRule][]} */
      const left_assoc = [
        [PREC.imply, '=>'],
        [PREC.or, choice('or', '|')],
        [PREC.and, choice('and', '&')],
        [PREC.compare, choice(
          '<', '>', '<=', '>=', '=',
          seq('~', '='), seq('not', '='),
          seq('~', 'in'), seq('not', 'in')
        )],
        [PREC.add, choice('+', '-', 'xor')],
        [PREC.multiply, choice('*', '/', 'div', 'mod', 'rem', 'shl', 'shr')],
      ];

      // In toco, exponentiation is right-associative,
      // while in Turing, it's left-associative.
      //
      // Since we're targeting toco anyways, we're keeping
      // it right associative.
      /** @type {[number, string | ChoiceRule][]} */
      const right_assoc = [
        [PREC.exp, '**']
      ];

      return choice(
        ...left_assoc.map(([precedence, operator]) => prec.left(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression),
        ))),
        ...right_assoc.map(([precedence, operator]) => prec.right(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression),
        )))
      );
    },

    unary_expression: $ => choice(
      prec(PREC.not, seq(
        field('operator', choice('not', '~')),
        field('right', $._expression)
      )),
      prec(PREC.negation, seq(
        field('operator', choice('-', '+')),
        field('right', $._expression)
      ))
    ),

    paren_expression: $ => seq('(', $._expression, ')'),

    field_expression: $ => prec.left(PREC.field, seq(
      field('left', $._expression),
      field('operator', '.'),
      field('field', $.path_component)
    )),

    deref_expression: $ => prec.left(PREC.deref, seq(
      field('operator', '^'),
      field('right', $._expression),
    )),

    cheat_expression: $ => seq(
      // Not planning to support the size_spec part in sema, since while the
      // acceptable values are only 1, 2 and 4, those can be computed in an
      // arbitrary manner, and that's not fun for incremental compilation
      'cheat', '(',
      field('to_type', $._type), ',',
      field('operand', $._expression),
      optional(choice(
        ',',
        seq(':', field('size_spec', $._expression)),
      )),
      ')'
    ),

    nat_cheat_expression: $ => prec.left(PREC.nat_cheat, seq(
      field('operator', '#'),
      field('right', $._expression),
    )),

    arrow_expression: $ => prec.left(PREC.arrow, seq(
      field('left', $._expression),
      field('operator', '->'),
      field('field', $.identifier)
    )),

    _type: $ => choice(
      $.primitive_type,
      $.nameref_type,
      $.range_type,
      $.enum_type,
      $.array_type,
      $.set_type,
      $.record_type,
      $.union_type,
      $.pointer_type,
      $.function_type,
      $.procedure_type,
      $.collection_type,
      $.condition_type,
    ),

    primitive_type: $ => prec.right(choice(
      'boolean',
      'addressint',
      'int',
      'int1',
      'int2',
      'int4',
      'nat',
      'nat1',
      'nat2',
      'nat4',
      'real',
      'real4',
      'real8',
      seq('char', optional($.charseq_size)),
      seq('string', optional($.charseq_size)),
    )),

    range_type: $ => seq(
      field('start', $._expression),
      '..',
      field('end', $._expression)
    ),

    // ???:
    // - does a cheat expression allow inline set/enum type defs?
    //   - no
    // - does a cheat expression allow overriding size spec, or does it use the same size spec here?
    //   - allows overriding, smaller size means can get a value that's too big
    identifier: $ => /[a-zA-Z_][a-zA-Z_0-9]*/,

    _name_list: $ => sepBy1(',', field('name', $.identifier)),
    item_path: $ => prec.right(PREC.item_path, sepBy1('.', $.path_component)),

    path_component: $ => $.identifier,
  }
});

function sepBy1(sep, rule) {
  return seq(rule, repeat(seq(sep, rule)));
}

function sepBy(sep, rule) {
  return optional(sepBy1(sep, rule));
}

function end_keyword_tail(bit) {
  return choice(seq('end', bit), `end${bit}`)
}

function end_named_tail($) {
  // don't really care about the name being different or not being there at all
  return prec.right(seq(
    'end',
    optional(field('end_name', $.identifier))
  ))
}

function _statement_list($) {
  return repeat($._statement_line);
}

/** @type {(prefix: string | Rule, ...rules: [...Rule[], Rule]) => Rule} */
function optional_chain(prefix, ...rules) {
  let [last, ...rest] = rules.reverse();
  return rest.reduce((next, current) => optional(seq(prefix, current, next)), optional(seq(prefix, last)))

}

// - Range exprs should be hoisted into the precedence tree
//   - Auto creates span covering the bounds, don't have to make one
// - AllExpr is an atom, but can keep same logic
//   - Why not "allow" `all + 1` and reject it later? Would mean that we'd have to check that all is in a valid position,
//     but eh...

// Error kinds:
// - `all` can't be used here

// ah, so we basically want to create idxs from child to parent

// mostly wondering on how to go from parsing path to expression form

// so it'd be

// expression_or_path:
// - try as a path first
// - if could be an expression (via lookahead), convert!
//   - `expr_binding_power` has a bailout way to notify completion :D

// Path:
// (PathComponent '.')+

// PathComponent:
// NameRef GenericArgs?

// GenericArgs:
// '[' (GenericArg ',')* ']'

// ?
// const(???)

// how to parse this?
// a[1..2]

// as either:
// - range expr
// - constrained ty

// i like the `ty is range` syntax from pattern types, since that both specifies the size, and is unambiguous :D

// alt `ty in 1..2`, tho we'd want `ty is Some | None`

// can't really have dedicated path nodes, because:
//
// ^a.b[int]
//
// needs to be (field (deref nameref) (component (primitive int)))
